# spacetime_galerkin_pod

./: .gitignore  .gitlab-ci.yml  README.md  requirements.txt  setup.cfg  setup.py
multidim_galerkin_pod/: chaos_expansion_utils.py  gen_pod_utils.py  ldfnp_ext_cholmod.py  mock_ext_cholmod.py  ten_sor_utils.py
spacetime_galerkin_pod/: chaos_expansion_utils.py  gen_pod_utils.py  ldfnp_ext_cholmod.py  mock_ext_cholmod.py  ten_sor_utils.py
tests/: generate_mass_mat.py  get_gaussqr_wrtdnsty.py  matric-vector-ization.py  test_units_gaussqr.py  test_units_ldfndpextcholmod.py
tests/testdata/: massmat_square_CG1_N20.mtx  massmat_square_CG1_N25.mtx
