[metadata]
name = multidim_galerkin_pod

author = Jan Heiland
author-email = jnhlnd@gmail.com
maintainer = Jan Heiland
maintainer-email = jnhlnd@gmail.com
summary = helper/core functions for Galerkin POD in multiple dimensions
description-file = README.md
long_description_content_type = text/markdown
home-page = https://github.com/highlando/spacetime_galerkin_pod
license = GPLv3
classifier =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[files]
packages =
    multidim_galerkin_pod
